outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-22_21-21-05/evaluations/problem_eval8630794356184439052_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance of proximity to the current node and the destination based on the remaining unvisited nodes, using a harmonic mean to balance the distances, and includes a fallback to the nearest neighbor when the product-based selection is inconclusive.}
                                                                                                                                                                                                                                                             ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance of proximity to the current node and the destination based on the remaining unvisited nodes, using a harmonic mean to balance the distances, and includes a fallback to the nearest neighbor when the product-based selection is inconclusive.}
                                                                                                                                                                                                                                                             ^
SyntaxError: unmatched '}'
